GemLibPki: RELEASE 0.5.0